everything is working just need to make back button look pretty

--- a/app/client/views/trees/dichotomous.html
+++ b/app/client/views/trees/dichotomous.html
@@ -83,10 +83,10 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Northern White Cedar</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Red Cedar</span>
 			</div>
 		</div>
@@ -125,13 +125,13 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">White Pine</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Red Pine / Norway Pine</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Jack Pine</span>
 			</div>
 		</div>
@@ -143,7 +143,7 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Tamarack</span>
 			</div>
 		</div>
@@ -159,10 +159,10 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Balsam Fir</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Hemlock</span>
 			</div>
 		</div>
@@ -178,10 +178,10 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">White Spruce</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Black Spruce</span>
 			</div>
 		</div>
@@ -289,29 +289,29 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
-				<span class="text">Chinkapin Oak</span>
+			<div class="btn text tree-item">
+				<span class="text">Chestnut Oak</span>
 			</div>
-			<div class="btn text">
-				<span class="text">Burk Oak</span>
+			<div class="btn text tree-item">
+				<span class="text">Bur Oak</span>
 			</div>
 		</div>
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">White Oak</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Swamp White Oak</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Black Oak</span>
 			</div>
 		</div>
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Red Oak</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Northern Pin Oak</span>
 			</div>
 		</div>
@@ -360,7 +360,7 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Hawthorn</span>
 			</div>
 		</div>
@@ -376,15 +376,15 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Yellow Birch</span>
 			</div>
 		</div>
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">River Birch</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Paper Birch</span>
 			</div>
 		</div>
@@ -400,16 +400,16 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
-				<span class="text">Large Tooth Aspen</span>
+			<div class="btn text tree-item">
+				<span class="text">Big-toothed Aspen</span>
 			</div>
 		</div>
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Quaking Aspen</span>
 			</div>
-			<div class="btn text">
-				<span class="text">Balm of Gilead</span>
+			<div class="btn text tree-item">
+				<span class="text">Balsam Poplar</span>
 			</div>
 		</div>
 	</div>
@@ -419,37 +419,34 @@
 	<a href="/trees/simplenonlobedleaf">Back</a>
 
 	<div id="message">
-		<p><a href="/trees/otherpage2">Page 2</a></p>
+		<p><a href="/trees/other2">Page 2</a></p>
 	</div>
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
-				<span class="text">Bluebeech</span>
+			<div class="btn text tree-item">
+				<span class="text">Pin Cherry</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
+				<span class="text">Black Cherry</span>
+			</div>
+		</div>
+		<div class="row">
+			<div class="btn text tree-item">
+				<span class="text">Blue beech</span>
+			</div>
+			<div class="btn text tree-item">
 				<span class="text">Ironwood</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Beech</span>
 			</div>
 		</div>
 		<div class="row">
-			<div class="btn text">
-				<span class="text">Choke Cherry</span>
-			</div>
-			<div class="btn text">
-				<span class="text">Pin Cherry</span>
-			</div>
-		</div>
-		<div class="row">
-			<div class="btn text">
-				<span class="text">Black Cherry</span>
-			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Hackberry</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Basswood</span>
 			</div>
 		</div>
@@ -461,21 +458,21 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Juneberry or Service Berry</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Rock Elm</span>
 			</div>
 		</div>
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">American Elm</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Slippery Elm</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Willow</span>
 			</div>
 		</div>
@@ -491,10 +488,10 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Black Walnut</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Butternut</span>
 			</div>
 		</div>
@@ -510,19 +507,19 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Bitternut Hickory</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Shagbark Hickory</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Black Locust</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Honey Locust</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Mountain Ash</span>
 			</div>
 		</div>
@@ -561,16 +558,16 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Black Ash</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Green Ash</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">White Ash Mountain Ash</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Box Elder</span>
 			</div>
 		</div>
@@ -582,7 +579,7 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Sugar Maple</span>
 			</div>
 		</div>
@@ -598,10 +595,10 @@
 
 	<div class="navigation">
 		<div class="row">
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Red Maple</span>
 			</div>
-			<div class="btn text">
+			<div class="btn text tree-item">
 				<span class="text">Silver Maple</span>
 			</div>
 		</div>
