Dichotomous tree key is working

--- a/app/client/views/trees/dichotomous.html
+++ b/app/client/views/trees/dichotomous.html
@@ -1,5 +1,9 @@
 <template name="TreesConiferous">
-	<a href="/trees">Back</a>
+	<a class="trees-back" href="/trees">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Does it have needles?</p>
@@ -22,7 +26,11 @@
 </template>
 
 <template name="TreesDeciduous">
-	<a href="/trees">Back</a>
+	<a class="trees-back" href="/trees">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Are the branches alternating or opposite?</p>
@@ -45,7 +53,11 @@
 </template>
 
 <template name="TreesNeedle">
-	<a href="/trees/coniferous">Back</a>
+	<a class="trees-back" href="/trees/coniferous">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>How are the needles arranged at the base?</p>
@@ -75,7 +87,11 @@
 </template>
 
 <template name="TreesNotNeedle">
-	<a href="/trees/coniferous">Back</a>
+	<a class="trees-back" href="/trees/coniferous">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
@@ -94,7 +110,11 @@
 </template>
 
 <template name="TreesSingleNeedle">
-	<a href="/trees/needle">Back</a>
+	<a class="trees-back" href="/trees/needle">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Are the needles flat or angled?</p>
@@ -117,7 +137,11 @@
 </template>
 
 <template name="TreesGroupedNeedle">
-	<a href="/trees/needle">Back</a>
+	<a class="trees-back" href="/trees/needle">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these three: </p>
@@ -139,7 +163,11 @@
 </template>
 
 <template name="TreesClusteredNeedle">
-	<a href="/trees/needle">Back</a>
+	<a class="trees-back" href="/trees/needle">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div class="navigation">
 		<div class="row">
@@ -151,7 +179,11 @@
 </template>
 
 <template name="TreesFlatNeedle">
-	<a href="/trees/singleneedle">Back</a>
+	<a class="trees-back" href="/trees/singleneedle">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
@@ -170,7 +202,11 @@
 </template>
 
 <template name="TreesAngledNeedle">
-	<a href="/trees/singleneedle">Back</a>
+	<a class="trees-back" href="/trees/singleneedle">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
@@ -189,7 +225,11 @@
 </template>
 
 <template name="TreesAlternateBranching">
-	<a href="/trees/deciduous">Back</a>
+	<a class="trees-back" href="/trees/deciduous">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Does the tree have simple or compound leaves?</p>
@@ -212,7 +252,11 @@
 </template>
 
 <template name="TreesOppositeBranching">
-	<a href="/trees/deciduous">Back</a>
+	<a class="trees-back" href="/trees/deciduous">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Does the tree have simple or compound leaves?</p>
@@ -235,7 +279,11 @@
 </template>
 
 <template name="TreesAlternateBranchingSimpleLeaf">
-	<a href="/trees/alternatebranching">Back</a>
+	<a class="trees-back" href="/trees/alternatebranching">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Does the tree have lobed leaves?</p>
@@ -258,7 +306,11 @@
 </template>
 
 <template name="TreesAlternateBranchingCompoundLeaf">
-	<a href="/trees/alternatebranching">Back</a>
+	<a class="trees-back" href="/trees/alternatebranching">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Does the tree have a plated pith?</p>
@@ -281,7 +333,11 @@
 </template>
 
 <template name="TreesSimpleLobedLeaf">
-	<a href="/trees/alternatebranchingsimpleleaf">Back</a>
+	<a class="trees-back" href="/trees/alternatebranchingsimpleleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these:</p>
@@ -319,7 +375,11 @@
 </template>
 
 <template name="TreesSimpleNonLobedLeaf">
-	<a href="/trees/alternatebranchingsimpleleaf">Back</a>
+	<a class="trees-back" href="/trees/alternatebranchingsimpleleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Pick one of these attributes that fits the tree:</p>
@@ -356,7 +416,11 @@
 </template>
 
 <template name="TreesThorns">
-	<a href="/trees/simplenonlobedleaf">Back</a>
+	<a class="trees-back" href="/trees/simplenonlobedleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div class="navigation">
 		<div class="row">
@@ -368,7 +432,11 @@
 </template>
 
 <template name="TreesPaperyBark">
-	<a href="/trees/simplenonlobedleaf">Back</a>
+	<a class="trees-back" href="/trees/simplenonlobedleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these three:</p>
@@ -392,7 +460,11 @@
 </template>
 
 <template name="TreesFlattenedStems">
-	<a href="/trees/simplenonlobedleaf">Back</a>
+	<a class="trees-back" href="/trees/simplenonlobedleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these three:</p>
@@ -416,7 +488,11 @@
 </template>
 
 <template name="TreesOther">
-	<a href="/trees/simplenonlobedleaf">Back</a>
+	<a class="trees-back" href="/trees/simplenonlobedleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p><a href="/trees/other2">Page 2</a></p>
@@ -454,7 +530,11 @@
 </template>
 
 <template name="TreesOther2">
-	<a href="/trees/other">Back</a>
+	<a class="trees-back" href="/trees/other">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div class="navigation">
 		<div class="row">
@@ -480,7 +560,11 @@
 </template>
 
 <template name="TreesPlatedPith">
-	<a href="/trees/alternatebranchingcompoundleaf">Back</a>
+	<a class="trees-back" href="/trees/alternatebranchingcompoundleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
@@ -499,7 +583,11 @@
 </template>
 
 <template name="TreesNotPlatedPith">
-	<a href="/trees/alternatebranchingcompoundleaf">Back</a>
+	<a class="trees-back" href="/trees/alternatebranchingcompoundleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these trees:</p>
@@ -527,7 +615,11 @@
 </template>
 
 <template name="TreesOppositeBranchingSimpleLeaf">
-	<a href="/trees/oppositebranching">Back</a>
+	<a class="trees-back" href="/trees/oppositebranching">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>Does the leaf have a smooth or a toothed outline?</p>
@@ -550,7 +642,11 @@
 </template>
 
 <template name="TreesOppositeBranchingCompoundLeaf">
-	<a href="/trees/oppositebranching">Back</a>
+	<a class="trees-back" href="/trees/oppositebranching">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these trees:</p>
@@ -575,7 +671,11 @@
 </template>
 
 <template name="TreesSmoothOutline">
-	<a href="/trees/oppositebranchingsimpleleaf">Back</a>
+	<a class="trees-back" href="/trees/oppositebranchingsimpleleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div class="navigation">
 		<div class="row">
@@ -587,7 +687,11 @@
 </template>
 
 <template name="TreesToothedOutline">
-	<a href="/trees/oppositebranchingsimpleleaf">Back</a>
+	<a class="trees-back" href="/trees/oppositebranchingsimpleleaf">
+		<div class="header">
+			<h1 class="trees-back-text">Back</h1>
+		</div>
+	</a>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
