--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -93,6 +93,7 @@
 </template>
 
 <template name="Dichotomous">
+	<div class="header-spacer"></div>
 	<div class="dichotomous-container">
 		{{> yield}}
 	</div>
