--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="row">
-			<a class="system-browser" href="http://arboretum.umn.edu/planyourvisit.aspx">
+			<a class="system-browser" href="http://www.csh.umn.edu/program-areas-section/nature-based-therapeutics/index.htm">
 				<div class="btn">
 					<span class="text">Nature<br/>Based Therapeutic Services</span>
 				</div>
