back button in dichotomous key

--- a/app/client/views/trees/dichotomous.html
+++ b/app/client/views/trees/dichotomous.html
@@ -1,9 +1,12 @@
 <template name="TreesConiferous">
-	<a class="trees-back" href="/trees">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Does it have needles?</p>
@@ -26,11 +29,14 @@
 </template>
 
 <template name="TreesDeciduous">
-	<a class="trees-back" href="/trees">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Are the branches alternating or opposite?</p>
@@ -53,11 +59,14 @@
 </template>
 
 <template name="TreesNeedle">
-	<a class="trees-back" href="/trees/coniferous">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/coniferous">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>How are the needles arranged at the base?</p>
@@ -87,11 +96,14 @@
 </template>
 
 <template name="TreesNotNeedle">
-	<a class="trees-back" href="/trees/coniferous">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/coniferous">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
@@ -110,11 +122,14 @@
 </template>
 
 <template name="TreesSingleNeedle">
-	<a class="trees-back" href="/trees/needle">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/needle">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Are the needles flat or angled?</p>
@@ -137,11 +152,14 @@
 </template>
 
 <template name="TreesGroupedNeedle">
-	<a class="trees-back" href="/trees/needle">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/needle">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these three: </p>
@@ -163,11 +181,14 @@
 </template>
 
 <template name="TreesClusteredNeedle">
-	<a class="trees-back" href="/trees/needle">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/needle">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div class="navigation">
 		<div class="row">
@@ -179,11 +200,14 @@
 </template>
 
 <template name="TreesFlatNeedle">
-	<a class="trees-back" href="/trees/singleneedle">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/singleneedle">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
@@ -202,11 +226,14 @@
 </template>
 
 <template name="TreesAngledNeedle">
-	<a class="trees-back" href="/trees/singleneedle">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/singleneedle">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
@@ -225,11 +252,14 @@
 </template>
 
 <template name="TreesAlternateBranching">
-	<a class="trees-back" href="/trees/deciduous">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/deciduous">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Does the tree have simple or compound leaves?</p>
@@ -252,11 +282,14 @@
 </template>
 
 <template name="TreesOppositeBranching">
-	<a class="trees-back" href="/trees/deciduous">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/deciduous">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Does the tree have simple or compound leaves?</p>
@@ -279,11 +312,14 @@
 </template>
 
 <template name="TreesAlternateBranchingSimpleLeaf">
-	<a class="trees-back" href="/trees/alternatebranching">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/alternatebranching">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Does the tree have lobed leaves?</p>
@@ -306,11 +342,14 @@
 </template>
 
 <template name="TreesAlternateBranchingCompoundLeaf">
-	<a class="trees-back" href="/trees/alternatebranching">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/alternatebranching">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Does the tree have a plated pith?</p>
@@ -333,11 +372,14 @@
 </template>
 
 <template name="TreesSimpleLobedLeaf">
-	<a class="trees-back" href="/trees/alternatebranchingsimpleleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/alternatebranchingsimpleleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these:</p>
@@ -375,11 +417,14 @@
 </template>
 
 <template name="TreesSimpleNonLobedLeaf">
-	<a class="trees-back" href="/trees/alternatebranchingsimpleleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/alternatebranchingsimpleleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Pick one of these attributes that fits the tree:</p>
@@ -416,11 +461,14 @@
 </template>
 
 <template name="TreesThorns">
-	<a class="trees-back" href="/trees/simplenonlobedleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/simplenonlobedleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div class="navigation">
 		<div class="row">
@@ -432,11 +480,14 @@
 </template>
 
 <template name="TreesPaperyBark">
-	<a class="trees-back" href="/trees/simplenonlobedleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/simplenonlobedleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these three:</p>
@@ -460,11 +511,14 @@
 </template>
 
 <template name="TreesFlattenedStems">
-	<a class="trees-back" href="/trees/simplenonlobedleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/simplenonlobedleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these three:</p>
@@ -488,11 +542,14 @@
 </template>
 
 <template name="TreesOther">
-	<a class="trees-back" href="/trees/simplenonlobedleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/simplenonlobedleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p><a href="/trees/other2">Page 2</a></p>
@@ -530,11 +587,14 @@
 </template>
 
 <template name="TreesOther2">
-	<a class="trees-back" href="/trees/other">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/other">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div class="navigation">
 		<div class="row">
@@ -560,11 +620,14 @@
 </template>
 
 <template name="TreesPlatedPith">
-	<a class="trees-back" href="/trees/alternatebranchingcompoundleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/alternatebranchingcompoundleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
@@ -583,11 +646,14 @@
 </template>
 
 <template name="TreesNotPlatedPith">
-	<a class="trees-back" href="/trees/alternatebranchingcompoundleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/alternatebranchingcompoundleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these trees:</p>
@@ -615,11 +681,14 @@
 </template>
 
 <template name="TreesOppositeBranchingSimpleLeaf">
-	<a class="trees-back" href="/trees/oppositebranching">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/oppositebranching">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>Does the leaf have a smooth or a toothed outline?</p>
@@ -642,11 +711,14 @@
 </template>
 
 <template name="TreesOppositeBranchingCompoundLeaf">
-	<a class="trees-back" href="/trees/oppositebranching">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/oppositebranching">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these trees:</p>
@@ -671,11 +743,14 @@
 </template>
 
 <template name="TreesSmoothOutline">
-	<a class="trees-back" href="/trees/oppositebranchingsimpleleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/oppositebranchingsimpleleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div class="navigation">
 		<div class="row">
@@ -687,11 +762,14 @@
 </template>
 
 <template name="TreesToothedOutline">
-	<a class="trees-back" href="/trees/oppositebranchingsimpleleaf">
-		<div class="header">
+	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
+		<a class="trees-back" href="/trees/oppositebranchingsimpleleaf">
 			<h1 class="trees-back-text">Back</h1>
-		</div>
-	</a>
+		</a>
+	</div>
 
 	<div id="message">
 		<p>It's probably one of these two:</p>
