--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -87,6 +87,9 @@
 <template name="TreesBack">
 <a class="trees-back" href="{{back}}">
 	<div class="header">
+		<a href="/home">
+			<img class="back-btn" src="/back57.png"/>
+		</a>
 		<h1 class="trees-back-text">Back</h1>
 	</div>
 </a>
