--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -3,7 +3,7 @@
 
 <div id="message">
 	<p>
-	This a copy of the Minnesota Department of Natural Resources' tree identification information. To start, pick whether the tree is deciduous or coniferous. For more information, please go to the <a class="system-browser" href="http://www.dnr.state.mn.us/trees_shrubs/index.html">Minnesota Department of Natural Resources</a>
+	Nature offers wondrous variety to the senses. Observe the trees around you and learn more about them using this copy of the Minnesota Department of Natural Resources' tree identification information. To start, pick whether the tree is deciduous or coniferous. For more information, please go to the <a class="system-browser" href="http://www.dnr.state.mn.us/trees_shrubs/index.html">Minnesota Department of Natural Resources</a>
 	</p>
 </div>
 
