udapte information on external jump message to audubon field guide

--- a/app/client/views/birds/birds.html
+++ b/app/client/views/birds/birds.html
@@ -1,7 +1,6 @@
 <template name="Birds">
 	<div id="message">
-		<p>You are about to go to the Audubon's "Guide to North American Birds". You will be leaving this application. At any time you can hit "done" to return to this application.</p>
-		<p>This website will help you identify birds through pictures, sounds and other characteristics of the birds.</p>
+		<p>Nature offers wondrous variety to the senses. Observe the birds around you and learn more about them using the Audubon's "Guide to North American Birds". You will be leaving this application. At any time you can hit "done" to return to this application. This website will help you identify birds through pictures, sounds and other characteristics of the birds.</p>
 		<a class="in-app-browser" href="https://www.audubon.org/field-guide">
 			<div class="button go">Go to external site</div>
 		</a>
