update information on 3030 external link

--- a/app/client/views/art/art.html
+++ b/app/client/views/art/art.html
@@ -1,6 +1,6 @@
 <template name="Art">
 	<div id="message">
-		<p>You are about to go to the official website for the 30 x 30 project. You will be leaving this application. At any time you can hit "done" to return to this application.</p>
+		<p>Nature Heals 30x30 is a month-long event that encourages you to spend 30 minutes in nature each day during the month of October. Learn more by visiting the official website for the 30x30 project. You will be leaving this application. At any time you can hit "done" to return to this application.</p>
 		<div class="button go">Go to external site</div>
 		<a href="/home">
 			<div class="button back">Go back</div>
