--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,7 +1,7 @@
 <template name="Home">
 	<div  class="home title">
 		<h1>Nature Heals</h1>
-		<p>A connection to nature is essential for health and wellbeing.</p>
+		<p>A connection to nature is essential for health and wellbeing. Discover the healing power of Nature at the Minnesota Landscape Arboretum.</p>
 	</div>
 
 	<div class="navigation">
