updated mla information

--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -32,5 +32,9 @@
 	</div>
 
 	{{> Header pageTitle='Information'}}
+
+	<div class="information-page info-box">
+		<p>Clicking on these buttons will take you to the Arboretum's official website leaving this app.</p>
+	</div>
 </template>
 
