--- a/app/client/views/mla/mla.css
+++ b/app/client/views/mla/mla.css
@@ -9,3 +9,14 @@
 	text-align: center;
 }
 
+.navigation.information {
+	transform: translateY(-45%);
+	-webkit-transform: translateY(-45%);
+}
+
+div.information-page.info-box {
+	text-align: center;
+	position: absolute;
+	font-size: 0.8em;
+	bottom: 20px;
+}
