replace logo and begin rearranging home layout.

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -6,6 +6,10 @@
 
 	<div class="navigation">
 		<div class="row">
+			<a href="/mla">
+				<img class="btn corner" src="/mla.png"/>
+			</a>
+
 			<a href="/map">
 				<img class="btn" src="/mapicon.png"/>
 			</a>
@@ -13,19 +17,15 @@
 			<a href="/observations">
 				<img class="btn" src="/diaryicon.png"/>
 			</a>
+
+			<a href="/pedometer">
+				<img class="btn corner" src="/footicon.png"/>
+			</a>
 		</div>
 
 		<div class="row">
-			<a href="/mla">
-				<img class="btn" src="/mla.png"/>
-			</a>
-
 			<a href="/art">
-				<img class="btn logo" src="/logo.png"/>
-			</a>
-
-			<a href="/pedometer">
-				<img class="btn" src="/footicon.png"/>
+				<img class="btn logo" src="/dogcommons.png"/>
 			</a>
 		</div>
 	</div>
