rearrange home buttons into a pawprint format

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -4,7 +4,7 @@
 		<p>A connection to nature is essential for health and wellbeing. Discover the healing power of Nature at the Minnesota Landscape Arboretum.</p>
 	</div>
 
-	<div class="navigation">
+	<div class="navigation home">
 		<div class="row">
 			<a href="/mla">
 				<img class="btn corner" src="/mla.png"/>
