--- a/app/client/views/home/home.css
+++ b/app/client/views/home/home.css
@@ -20,10 +20,10 @@
 }
 
 .navigation .btn {
-	width: 20vw;
-	height: 20vw;
-	max-width: 15vh;
-	max-height: 15vh;
+	width: 30vw;
+	height: 30vw;
+	max-width: 20vh;
+	max-height: 20vh;
 	display: inline-block;
 	border-radius: 100%;
 	box-shadow: 0 2px 4px black;
@@ -31,6 +31,18 @@
 	text-align: center;
 	margin: 0 1vw;
 	background-color: #7be7d8;
+}
+
+.navigation.home .btn {
+	width: 20vw;
+	height: 20vw;
+	max-width: 15vh;
+	max-height: 15vh;
+}
+
+.navigation .btn.corner {
+	position: relative;
+	top: 10vw;
 }
 
 .navigation .btn.logo {
